chore: test patch

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -1,13 +1,13 @@
 {"version": 7,
  "packagesDir": ".lake/packages",
  "packages":
- [{"url": "https://github.com/leanprover/std4",
+ [{"url": "https://github.com/fgdorais/std4",
    "type": "git",
    "subDir": null,
-   "rev": "e403f680f0beb8610c29e6f799132e8be880554e",
+   "rev": "a5ebfa521f27afa605c3dd16a168249824b5d684",
    "name": "std",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "main",
+   "inputRev": "nat-sub",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/quote4",
